VERSION 1.1.1
- When producing the GSEA plot the option to plot only NES did not work.
- Fixed bug in export2CSV which caused it to ignore the row.names argument
- Fixed bug in ExpressionPhenoTest which caused to incorrectly compute P-values when adjustment variables were specified and the variable of interest was categorical or ordinal
VERSION 1.0.1
-findCopyNumber has been added to package. This function is very similar to ACE. Finds regions with copy number variation.
-GSEA's wilcoxon plot did not take into account signatures with only one gene.
-Wilcoxon test implemented in GSEA now accounts for a gene set's mean to be different from 0 and from all genes' mean value.
-When running GSEA with a non-centered score big gene sets may produce problems. The software accounts for the maximum number of genes allowed in a gene set. If some gene set is bigger than that number wilcoxon test is used instead of permutation test.
VERSION 1.0.0
-First stable version.