@@ -1,6 +1,7 @@
 \name{get gseaSignatures' elements}
 \alias{getEs}
 \alias{getEsSim}
+\alias{getNes}
 \alias{getFcHr}
 \docType{data}
 \title{
@@ -8,13 +9,15 @@ Substract element's of a gseaSignaturesSign or gseaSignaturesVar object (obtaine
 gseaSignatures function). 
 }
 \description{
-getEs returns ES (enrichment scores) getEsNes returns simulated ES
-(needed to compute pvals) and getFcHr returns the fold changes or hazard
-ratios used to compute the ES and simulated ES.
+getEs returns ES (enrichment scores) getEsSim returns simulated ES
+(needed to compute pvals), getNes returns NES (normalized enrichment
+scores) and getFcHr returns the fold changes or hazard used to compute
+the ES, simulated ES and NES.
 }
 \usage{
 getEs(x)
 getEsSim(x)
+getNes(x)
 getFcHr(x)
 }
 \arguments{
